# def-trader

./: .gitignore
.github/: signaler-ci-cd.yaml
.github/workflows/: signaler-ci-cd.yaml  terraform-deploy.yaml
signaler/: .env.example  Overview.md  README.md  README_shared_logging.md  apply_shared_logging.py  cloud-run-backfill-job.yaml  cloud-run-job.yaml  cloud-run-ohlcv-parquet-job.yaml  debug-billing.sh  docker-compose.yaml  makefile  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test.sh  test_backfill_service.py  test_ingestion_server.py  test_json_logging.py  test_logging.py
signaler/.github/workflows/: signaler-ci-cd.yaml  terraform-deploy.yaml
signaler/config/: settings.py  stocks_config.yaml
signaler/docker/: Dockerfile.api  Dockerfile.backfill.job  Dockerfile.base  Dockerfile.ingestion  Dockerfile.ingestion.job  Dockerfile.ohlcv.parquet.job  Dockerfile.training  Dockferfile.ingestion  backfill-job-deployment.md  entrypoint.sh
signaler/docs/: cloud-job-scheduling.md
signaler/notebooks/: data_analysis.ipynb
signaler/scripts/: build_and_push_images.sh  deploy.sh  deploy_backfill_job.sh  deploy_ingestion_job.sh  deployment-summary.txt  local_dev_setup.md  manage_historical_backfill.sh  setup_gcp.sh  setup_terraform_auth.sh  terraform_checks.sh  terraform_full_deploy.sh  terraform_minimal.sh  test_deploy.sh  test_local_setup.py  test_metadata_store.py  tfrun.sh
signaler/src/: shared_logging.py
signaler/src/api/: backfill_service.py  ingestion_server.py  prediction_service.py
signaler/src/data_ingestion/: alpha_vantage_client.py  data_validator.py  macro_data_fetcher.py  ohlcv_fetcher.py  ohlcv_parquet_fetcher.py  sentiment_parquet_fetcher.py
signaler/src/feature_engineering/: graph_constructor.py  technical_indicators.py  temporal_features.py
signaler/src/jobs/: backfill_job.py  daily_ingestion.py  historical_backfill_job.py  ohlcv_ingestion_job.py  sentiment_ingestion_job.py  training_job.py
signaler/src/models/: temporal_gnn.py
signaler/src/storage/: __init__.py  parquet_client.py  storage_config.py
signaler/src/training/: metrics.py  prediction_pipeline.py  trainer.py
signaler/src/utils/: __init__.py  bigquery_client.py  logger.py  logging_config.py
signaler/src/utils/bigquery/: __init__.py  admin.py  backfill_tracker.py  base.py  client.py  operations.py  quality.py  schemas.py  utils.py
signaler/terraform/: backend.conf  main.tf  tfplan  variables.tf
signaler/terraform/modules/bigquery/: main.tf  variables.tf
signaler/terraform/modules/cloud_run/: README.md  main.tf  variables.tf
signaler/terraform/modules/cloud_run_jobs/: main.tf  variables.tf
signaler/terraform/modules/cloud_scheduler/: README.md  main.tf  variables.tf
signaler/terraform/modules/vertex_ai/: README.md  main.tf  outputs.tf  variables.tf
signaler/tests/: test_data_ingestion.py  test_model.py
