[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-signal-system"
version = "0.1.0"
description = "GNN-based trading signal generation system"
authors = [
    {name = "Trading System Team", email = "team@tradingsystem.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
keywords = ["trading", "machine-learning", "gnn", "finance", "predictions"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies (combines requirements.txt)
# Core dependencies (combines requirements.txt)
dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",

    # Google Cloud (updated versions)
    "google-cloud-bigquery>=3.12.0,<4.0.0",
    "google-cloud-storage>=2.12.0,<3.0.0",
    "google-cloud-scheduler>=2.13.0,<3.0.0",
    "google-cloud-logging>=3.8.0,<4.0.0",
    "google-cloud-aiplatform>=1.38.0,<2.0.0",
    "google-cloud-secret-manager>=2.16.0,<3.0.0",

    # Data processing
    "pandas>=2.0.0,<2.2.0",
    "numpy>=1.24.0,<2.0.0",
    "pyarrow>=12.0.0,<16.0.0",
    "pandas-gbq>=0.19.0,<1.0.0",
    "scipy>=1.11.0,<2.0.0",

    # Financial data
    "alpha-vantage==2.3.1",
    "yfinance>=0.2.18,<1.0.0",
    "ta>=0.10.2,<1.0.0",
    "pandas-ta>=0.3.14b0",
    "holidays>=0.34,<1.0.0",

    # Machine Learning
    "torch>=2.1.0,<3.0.0",
    "torch-geometric>=2.4.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "tensorboard>=2.15.0,<3.0.0",
    "mlflow>=2.8.0,<3.0.0",

    # Graph and Visualization
    "networkx>=3.1,<4.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",

    # API and web
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.4.0,<3.0.0",

    # Utilities
    "click>=8.1.0,<9.0.0",
    "loguru>=0.7.0,<1.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "joblib>=1.3.0,<2.0.0",
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "black>=23.7.0,<25.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

test = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

lint = [
    "flake8>=6.1.0,<8.0.0",
    "black>=23.7.0,<25.0.0",
    "mypy>=1.5.0,<2.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# Console scripts (from setup.py entry_points)
[project.scripts]
trading-daily-ingestion = "src.jobs.daily_ingestion:main"
trading-backfill = "src.jobs.backfill_job:main"
trading-train = "src.jobs.training_job:main"
trading-predict = "src.training.prediction_pipeline:main"

[project.urls]
Homepage = "https://github.com/yourorg/trading-signal-system"
Repository = "https://github.com/yourorg/trading-signal-system.git"
Issues = "https://github.com/yourorg/trading-signal-system/issues"
Documentation = "https://github.com/yourorg/trading-signal-system/blob/main/README.md"

# Package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-data]
config = ["*.yaml", "*.yml"]

# Black code formatting
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy type checking
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Flake8 configuration (in setup.cfg since flake8 doesn't support pyproject.toml yet)
# But we can document the settings here for reference:
# [tool.flake8]  # Not supported yet
# max-line-length = 100
# extend-ignore = E203, W503
# max-complexity = 10